wrote homeRoutes,updated post model, updated helpers, wrote the handlebar pages: homepage, main, and login

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,11 +14,11 @@
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
         <span role="img" aria-label="money">💸</span>
-        <a href="/">Fund My Project!</a>
+        <a href="/">Tech Blog</a>
       </h1>
       <nav>
         <!-- Conditionally render login or logout links -->
-        <a href="/home">Home</a>
+        <a href="/">Home</a>
         {{#if logged_in}}
         <a href="/profile">Profile</a> |
         <button class="no-button" id="logout">Logout</button>
