--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,11 +12,10 @@
 <body>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        <span role="img" aria-label="money">💸</span>
+      <h1 class="mt-3">
         <a href="/">Tech Blog</a>
       </h1>
-      <nav>
+      <nav class="text-right font-weight-bold">
         <!-- Conditionally render login or logout links -->
         <a href="/">Home</a>
         {{#if logged_in}}
