--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fund My Project!</title>
+  <title>Tech Blog</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -19,7 +19,7 @@
         <!-- Conditionally render login or logout links -->
         <a href="/">Home</a>
         {{#if logged_in}}
-        <a href="/profile">Profile</a> |
+        <a href="/dashboard">Dashboard</a> |
         <button class="no-button" id="logout">Logout</button>
         {{else}}
         <a href="/login">Login</a>
@@ -37,7 +37,7 @@
 
   <!-- Render script for logged in users only -->
   {{#if logged_in}}
-  <script src="/js/logout.js"></script>
+  <script src="./js/logout.js"></script>
   {{/if}}
 </body>
 
