--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -21,10 +21,10 @@
   </div>
   {{/if}}
 
-  <div class="form-group text-center">
-        <button type="submit" class="btn btn-primary">Create Post</button>
+  <div class="text-center">
+        <h4><a href="/api/posts/create">Create Post</a></h4>
   </div>
 
 </div>
 
-<script src="./js/dashboard.js"></script>
+<script src="/js/dashboard.js"></script>
