--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,15 +12,15 @@
 <body>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
-      <h1 class="mt-3">
+      <h1 class="mt-3 ml-3">
         <a href="/">Tech Blog</a>
       </h1>
-      <nav class="text-right font-weight-bold">
+      <nav class="text-right mr-3 font-weight-bold">
         <!-- Conditionally render login or logout links -->
-        <a href="/">Home</a>
+        <a href="/">Home</a> |
         {{#if logged_in}}
         <a href="/dashboard">Dashboard</a> |
-        <button class="no-button" id="logout">Logout</button>
+        <button class="btn btn-primary" id="logout">Logout</button>
         {{else}}
         <a href="/login">Login</a>
         {{/if}}
