--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -11,6 +11,7 @@
     <p>Posted by: {{usercomment.username}}</p>
 {{/if}}
 
+{{#if logged_in}}
   <h3>Leave a comment!</h3>
     <form class="form login-form">
       <div class="form-group">
@@ -20,4 +21,5 @@
         <button class="btn btn-primary" type="submit">Post</button>
       </div>
     </form>
+{{/if}}
 </div>
