updating login page styling, updating name of id referring to the signup username in login.js, added the format_date helper to the post handlebars

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -7,7 +7,7 @@
     {{#each comments as |comment|}}
     <div class="border border-primary">
     <p>{{comment.content}}</p>
-    <p>{{comment.date_created}}</p>
+    <p>{{format_date comment.date_created}}</p>
     </div>
     <br>
     {{/each}}
