--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,40 +1,52 @@
 <div class="row">
   <div class="col-md-6">
-    <h2>Login</h2>
+    <h3>Part of the Community? Login below!</h3>
 
     <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
+      <h5>Email:</h5> 
+      <div class="input-group input-group-sm">
+        <input type="text" class="form-control post-title" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" id="email-login"/>
       </div>
-      <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
+
+      <h5>Password:</h5> 
+      <div class="input-group input-group-sm">
+        <input type="password" class="form-control post-title" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" id="password-login"/>
       </div>
+
+       <br>
+
       <div class="form-group">
         <button class="btn btn-primary" type="submit">login</button>
       </div>
     </form>
+
   </div>
+  
   <div class="col-md-6">
-    <h2>Signup</h2>
+    <h3>Not a member? Signup below!</h3>
 
     <form class="form signup-form">
-      <div class="form-group">
-        <label for="username-signup">username:</label>
-        <input class="form-input" type="text" id="name-signup" />
+      <h5>Username:</h5> 
+      <div class="input-group input-group-sm">
+        <input type="text" class="form-control post-title" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" id="username-signup"/>
       </div>
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
+
+      <h5>Email:</h5> 
+      <div class="input-group input-group-sm">
+        <input type="text" class="form-control post-title" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" id="email-signup"/>
       </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+
+      <h5>Password:</h5> 
+      <div class="input-group input-group-sm">
+        <input type="password" class="form-control post-title" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" id="password-signup"/>
       </div>
+
+      <br>
+    
       <div class="form-group">
         <button class="btn btn-primary" type="submit">signup</button>
       </div>
+
     </form>
   </div>
 </div>
