wrote script in homeRoutes to get usernames based on comment user_id, and aggregate a comment object which included the comments content, creation date, user id and user name, streamlined handlebar styling

--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -13,19 +13,19 @@
   
     </div>
 
-    <div class="text-center mt-4">
-    <form class="form update-form">
-      <div class="form-group">
-        <button class="btn btn-primary w-25 p-3" type="submit" data-id="{{id}}">Update</button>
-      </div>
-    </form>
+    <div class=" mt-4">
+        <form class="form update-form">
+            <div class="form-group">
+                <button class="btn btn-primary w-25 p-3" type="submit" data-id="{{id}}">Update</button>
+            </div>
+        </form>
     
 
-    <form class="form delete-form">
-      <div class="form-group">
-        <button class="btn btn-primary w-25 p-3" type="submit" data-id="{{id}}">Delete</button>
-      </div>
-    </form>
+        <form class="form delete-form">
+            <div class="form-group">
+                <button class="btn btn-primary w-25 p-3" type="submit" data-id="{{id}}">Delete</button>
+            </div>
+        </form>
     </div>
 </div>
 
