--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,11 +1,11 @@
 <!-- Loop over each object in the projects array -->
 {{#each posts as |post| }}
-<div class="row mb-4">
+<div class="row mb-4 border-bottom">
   <div class="col-md-5">
     <h2>
       <a href="/post/{{post.id}}">{{post.title}}</a>
     </h2>
-    <p>Created by {{post.user.username}} on {{format_date post.date_created}}</p>
+    <p>Posted by {{post.user.username}} on {{format_date post.date_created}}</p>
   </div>
   <div class="col-md-7">
     <p>
