--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,28 +1,37 @@
 <div class="text-left">
-  <h2>{{title}}</h2>
-  <p>{{content}}</p>
-  <p>Created by {{user.username}} on {{date_created}}</p>
+  <div class="border-bottom mb-4">
+    <h2>{{title}}</h2>
+    <p>{{content}}</p>
+    <p>Posted By: {{user.username}} on {{format_date date_created}}</p>
+  </div>
 
 {{#if comments.length}}
     {{#each comments as |comment|}}
-    <div class="border border-primary">
+    <div class="border-bottom row">
+      <div class="col-md-11">
     <p>{{comment.content}}</p>
+    <p>Posted by: {{comment.user_name}}</p>
+    </div>
+    <div class="col-md-1">
     <p>{{format_date comment.date_created}}</p>
+    </div>
     </div>
     <br>
     {{/each}}
-    <p>Posted by: {{usercomment.username}}</p>
 {{/if}}
 
 {{#if logged_in}}
   <h3>Leave a comment!</h3>
     <form class="form comment-form">
-      <div class="form-group">
-        <input class="form-input comment"/>
+
+      <div class="input-group input-group-sm">
+        <input type="text" class="form-control post-title mb-3 comment" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" id="email-login"/>
       </div>
+
       <div class="form-group">
         <button class="btn btn-primary" type="submit" data-id="{{id}}">Post</button>
       </div>
+
     </form>
 {{/if}}
 </div>
