updated the router.delete in postRoutes to delete posts, removed console logs in userRoutes, moved console logs in homeRoutes, cleaned up formating in editpost.js, edited the seeding of user data to resolve issues with mismatching user_ids and comments, removed dashboard.js import in the dashboard.handlebars, added comments heading in the post.handlebar, added seed script to the package.json

--- a/views/createpost.handlebars
+++ b/views/createpost.handlebars
@@ -7,8 +7,8 @@
     </div>
 
     <h3>Content</h3> 
-    <div class="input-group input-group-lg">
-        <input type="text" class="form-control post-content" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg"/>
+    <div class="input-group input-group-lg text-wrap">
+        <input type="text" class="form-control post-content text-wrap text-truncate" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg"/>
     </div>
 
 
