--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -3,6 +3,7 @@
     <h2>{{title}}</h2>
     <p>{{content}}</p>
     <p>Posted By: {{user.username}} on {{format_date date_created}}</p>
+    <h3>Comments</h3>
   </div>
 
 {{#if comments.length}}
